# Casper-Buildathon-2026

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.indexer  Makefile  README.md  SPEC.md  codestyle.md  codestyle.rulebook.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  readme.md  spec.md  tsconfig.api.json  tsconfig.json  tsconfig.test.json  vercel.json  vite.config.ts  vitest.config.ts
crates/api/: Cargo.toml
crates/api/src/: auth.rs  config.rs  crypto.rs  errors.rs  lib.rs  main.rs  openapi.rs  server.rs
crates/api/src/analytics/: handlers.rs  mod.rs  models.rs  routes.rs
crates/api/src/auth/: db.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
crates/api/src/common/: config.rs  crypto.rs  email.rs  errors.rs  mod.rs  models.rs  pagination.rs  password.rs  query.rs  redis.rs  storage.rs
crates/api/src/handlers/: auth.rs  business.rs  health.rs  mod.rs
crates/api/src/health/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
crates/api/src/ico/: db.rs  handlers.rs  mod.rs  models.rs
crates/api/src/onchain/: common.rs  mod.rs
crates/api/src/onchain/ico/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
crates/api/src/onchain/staking/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
crates/api/src/onchain/transactions/: db.rs  handlers.rs  mod.rs  routes.rs
crates/api/src/onchain/vesting/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs
crates/api/src/providers/: background_check.rs  content_pinner.rs  email.rs  fair_housing.rs  kyc.rs  lease_chain.rs  lease_document.rs  metadata_stripper.rs  mod.rs  storage.rs
crates/api/src/services/: mod.rs
crates/api/src/services/analytics/: handlers.rs  mod.rs  models.rs  routes.rs
crates/api/src/services/applications/: db.rs  handlers.rs  mod.rs  models.rs  routes.rs  scoring.rs
crates/api/src/services/auth/: cookies.rs  db.rs  extractors.rs  handlers.rs  jwt.rs  logout.rs  middleware.rs  mod.rs  models.rs  password.rs  refresh.rs  routes.rs  sessions.rs  verify.rs  wallet.rs
crates/api/src/services/favorites/: db.rs  mod.rs
crates/api/src/services/health/: handlers.rs  (+1 more)
crates/api/src/staking/: db.rs  handlers.rs
crates/api/src/tax/: handlers.rs  mod.rs  models.rs  routes.rs
crates/api/src/transactions/: db.rs  handlers.rs  mod.rs  models.rs
crates/api/src/vesting/: handlers.rs  models.rs
crates/api/src/workers/: mod.rs
crates/api/tests/: analytics.rs  applications.rs  audit_verify_email.rs  auth.rs  auth_invalidate_before.rs  auth_middleware_cache.rs  auth_password.rs  auth_revoke_all.rs  auth_sessions.rs  common.rs  config.rs  crypto.rs  email_provider.rs  email_retry.rs  email_verification.rs  email_worker.rs  favorites.rs  health.rs  ico.rs  integration.rs  leases.rs  listings.rs  listings_gate.rs  listings_lifecycle.rs  listings_media.rs  models.rs  password.rs  properties.rs  readme.md  renewals.rs  security.rs  server.rs  server_shutdown.rs  staking.rs  storage_path_style.rs  tax.rs  transactions.rs  users.rs  users_avatar.rs  users_avatar_s3.rs  (+7 more)
crates/indexer/: Cargo.toml
crates/indexer/src/: address.rs  backfill.rs  client.rs  config.rs  cursor.rs  db.rs  error.rs  event_trait.rs  events.rs  lib.rs  main.rs  parser.rs  processor.rs  runner.rs  streaming.rs
crates/indexer/src/backfill/: cep18.rs  ces.rs  db.rs  ico.rs  mod.rs  parser.rs  rpc.rs
crates/indexer/src/events/: db.rs  mod.rs
crates/indexer/src/streaming/: db.rs  mod.rs
crates/indexer/tests/: address.rs  backfill_cep18.rs  backfill_ico.rs  ces_parser.rs  config.rs  contract_deploy_blocks.rs  event_handlers.rs  event_registry.rs  ico_backfill.rs  processor.rs  property_registry_events.rs  readme.md  staking_events.rs  streaming.rs  testnet_ico.rs  user_registry_events.rs  vesting_events.rs
crates/indexer/tests/common/: mod.rs  payloads.rs
crates/indexer_v2/: Cargo.toml
crates/indexer_v2/src/: backfill.rs  config.rs  db.rs  error.rs  event_trait.rs  lib.rs  processor.rs
crates/indexer_v2/src/events/: mod.rs
crates/indexer_v2/tests/: config.rs  event_registry.rs
smart_contracts/: .gitignore  Cargo.toml  Odra.toml  README.md  codestyle.rulebook.md  odra.rulebook.md
smart_contracts/docs/archived-features/: fractional-ownership.md  ico-staking-vesting.md
smart_contracts/env/: casper-livenet.env  casper-testnet.env
smart_contracts/resources/: casper-test-contracts.toml  contracts.toml
smart_contracts/resources/casper_contract_schemas/: big_coin_schema.json  compliance_policy_schema.json  escrow_schema.json  ico_schema.json  investor_registry_schema.json  lease_schema.json  nft_schema.json  property_fraction_token_schema.json  property_registry_schema.json  roles_schema.json  staking_schema.json  styks_price_feed_schema.json  tailor_coin_schema.json  treasury_schema.json  user_registry_schema.json  vesting_schema.json
smart_contracts/resources/legacy/: escrow_schema.json  ico_schema.json  lease_schema.json  nft_schema.json  roles_schema.json  staking_schema.json  styks_price_feed_schema.json  tailor_coin_schema.json  treasury_schema.json  vesting_schema.json
smart_contracts/review/2026_01/: smart_contracts_code_review_2026_01.md
smart_contracts/review/2026_05_26/: SC_Spec_Amendment_v1.md
smart_contracts/src/: big_coin.rs  common.rs  compliance_policy.rs  constants.rs  escrow.rs  ico.rs  investor_registry.rs  lease.rs  lib.rs  nft.rs  property_fraction_token.rs  property_registry.rs  revenue_distributor.rs  roles.rs  staking.rs  tailor_coin.rs  tests.rs  treasury.rs  user_registry.rs  vesting.rs
smart_contracts/src/interfaces/: styks_price_feed.rs
smart_contracts/src/mocks/: mod.rs  styks_price_feed.rs
smart_contracts/tests/: big_coin.rs  compliance_policy.rs  contract_metadata.rs  escrow.rs  ico.rs  ico_tests.rs  investor_registry.rs  lease.rs  lease_tests.rs  nft.rs  property_fraction_token.rs  property_registry.rs  roles_tests.rs  staking.rs  tailor_coin_tests.rs  treasury.rs  treasury_tests.rs  user_registry.rs  vesting.rs  vesting_tests.rs
(+2804 files in other folders)
