[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "rust_decimal", "migrate"] }
jsonwebtoken = "10.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = { version = "1", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
dotenv = "0.15"
redis = { version = "1.0.2", features = ["tokio-comp"] }
casper-types = "6.1.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
tower_governor = { version = "0.8", features = ["axum"] }
error_tools = "0.37"

[dev-dependencies]
axum-test = "18"
mockito = "1"
reqwest = { version = "0.13", features = ["json"] }
