[workspace]
members = ["crates/api", "crates/indexer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
# Denies non-idiomatic code for Rust 2018 edition.
rust_2018_idioms = { level = "warn", priority = -1 }
# Denies using features that may break in future Rust versions.
future_incompatible = { level = "warn", priority = -1 }
# Warns if public items lack documentation.
missing_docs = "warn"
# Warns for public types not implementing Debug.
missing_debug_implementations = "warn"
# Denies all unsafe code usage.
unsafe-code = "deny"

[workspace.lints.clippy]
# Denies pedantic lints, enforcing strict coding styles and conventions.
pedantic = { level = "warn", priority = -1 }
# Denies undocumented unsafe blocks.
undocumented_unsafe_blocks = "deny"
# Denies to prefer `core` over `std` when available, for `no_std` compatibility.
std_instead_of_core = "warn"
# Denies including files in documentation unconditionally.
doc_include_without_cfg = "warn"
# Denies missing inline in public items.
missing_inline_in_public_items = "warn"

# exceptions

# Allows functions that are only called once.
single_call_fn = "allow"
# Allows forcing a function to always be inlined.
inline_always = "allow"
# Allows item names that repeat the module name (e.g., `mod user { struct User; }`).
module_name_repetitions = "allow"
# Allows using fully qualified paths instead of `use` statements.
absolute_paths = "allow"
# Allows wildcard imports (e.g., `use std::io::*;`).
wildcard_imports = "allow"
# Allow to prefer `alloc` over `std` when available, for `no_std` compatibility.
std_instead_of_alloc = "allow"
# Allow put definitions of struct at any point in functions.
items_after_statements = "allow"
# Allow precission loss, for example during conversion from i64 to f64
cast_precision_loss = "allow"
# Allows `pub use` statements.
pub_use = "allow"
# Allows the `? operator.
question_mark_used = "allow"
# Allows implicit returns.
implicit_return = "allow"
# Allow ordering of fields in intuitive way.
arbitrary_source_item_ordering = "allow"
# Allow mod.rs files
mod_module_files = "allow"
# Allow missing docs for private items
missing_docs_in_private_items = "allow"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["cookie"] }
axum-test = "20.0"
base64 = "0.22"
casper-types = "7.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.19"
dotenv = "0.15"
email_address = "0.2"
futures-util = "0.3"
hex = "0.4"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
# FIXME(email-postmark): exact pin - postmark 2.0.0 links reqwest 0.12
# alongside our direct reqwest 0.13. Same pattern as rust-s3 (see below).
postmark = { version = "2.0.0", default-features = false, features = ["reqwest-rustls-tls"] }
rand = "0.10.0"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rust_decimal = { version = "1", features = ["serde"] }
# FIXME(media-storage): exact pin - rust-s3 0.37.x links reqwest 0.12
# alongside our direct reqwest 0.13. Migrate to aws-sdk-s3.
rust-s3 = { version = "=0.37.2", default-features = false, features = ["tokio-rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
wiremock = "0.6"
sha2 = "0.11"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "rust_decimal", "migrate", "json", "chrono"] }
strum = { version = "0.28", features = ["derive"] }
testcontainers = "0.27.0"
thiserror = "2.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
tower_governor = { version = "0.8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }
