[package]
name = "leasefi_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
styks-contracts = { git = "https://github.com/odradev/styks.git", branch = "feature/casper-shorts-client", features = []}
odra-modules = { version="2.5.0", features = [], default-features = false }
sha3 = { version = "0.10.8", features = [], default-features = false }
odra = { version = "2.5.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.5.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.5.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.5.0", features = [], default-features = false }
odra-cli = { version = "2.5.0", features = [], default-features = false }

[[bin]]
name = "leasefi_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "leasefi_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "leasefi_contracts_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
