[package]
name = "api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
error_tools = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }
strum = { workspace = true }
dotenv = { workspace = true }
casper-types = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
testcontainers = { workspace = true }

[lints]
workspace = true
