[package]
name = "indexer"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[features]
default = ["enabled", "integration"]
enabled = [
    "dep:casper-types",
    "dep:chrono",
    "dep:config",
    "dep:dotenv",
    "dep:futures-util",
    "dep:hex",
    "dep:reqwest",
    "dep:rustls",
    "dep:secrecy",
    "dep:serde",
    "dep:serde_json",
    "dep:sqlx",
    "dep:thiserror",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:tracing",
    "dep:tracing-subscriber",
]
full = ["enabled"]
integration = []

[dependencies]
casper-types = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
config = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
serial_test = { workspace = true }
wiremock = { workspace = true }
